--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header class="page-header">
+    <a class="header-logo"><img src="#" alt="Логотип Sedona" class="header-logo-img"></a>
+    <nav class="navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item"><a href="#" class="navigation-link">Главная</a></li>
+        <li class="navigation-item"><a href="#" class="navigation-link">О Седоне</a></li>
+        <li class="navigation-item"><a href="hotels.html" class="navigation-link">Гостиницы</a></li>
+      </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Поиск</span></a></li>
+        <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Избранное</span></a></li>
+        <li class="navigation-item"><a href="#" class="navigation-link">Хочу сюда</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
-  </body>
+  </main>
+  <footer class="page-footer">
+    <ul class="social-list">
+      <li class="social-item"><a href="https://vk.com/htmlacademy" class="social-link"><span class="visually-hidden">Вконтакте</span></a></li>
+      <li class="social-item"><a href="https://t.me/htmlacademy" class="social-link"><span class="visually-hidden">Telegram</span></a></li>
+      <li class="social-item"><a href="https://www.youtube.com/user/htmlacademyru" class="social-link"><span class="visually-hidden">Youtube</span></a></li>
+    </ul>
+    <a href="tel:+78128121212" class="footer-phone">+7 (812) 812-12-12</a>
+    <a href="https://htmlacademy.ru/" class="footer-logo"><img src="#" alt="Логотип HTML Academy" class="footer-logo-img"></a>
+  </footer>
+</body>
 </html>
