Разметил header и footer в hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -7,6 +7,32 @@
     <title>Отели</title>
 </head>
 <body>
+    <header class="page-header">
+        <a class="header-logo"><img src="#" alt="Логотип Sedona" class="header-logo-img"></a>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item"><a href="index.html" class="navigation-link">Главная</a></li>
+            <li class="navigation-item"><a href="#" class="navigation-link">О Седоне</a></li>
+            <li class="navigation-item"><a href="#" class="navigation-link">Гостиницы</a></li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Поиск</span></a></li>
+            <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Избранное</span></a></li>
+            <li class="navigation-item"><a href="#" class="navigation-link">Хочу сюда</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
     
+      </main>
+      <footer class="page-footer">
+        <ul class="social-list">
+          <li class="social-item"><a href="https://vk.com/htmlacademy" class="social-link"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="social-item"><a href="https://t.me/htmlacademy" class="social-link"><span class="visually-hidden">Telegram</span></a></li>
+          <li class="social-item"><a href="https://www.youtube.com/user/htmlacademyru" class="social-link"><span class="visually-hidden">Youtube</span></a></li>
+        </ul>
+        <a href="tel:+78128121212" class="footer-phone">+7 (812) 812-12-12</a>
+        <a href="https://htmlacademy.ru/" class="footer-logo"><img src="#" alt="Логотип HTML Academy" class="footer-logo-img"></a>
+      </footer>    
 </body>
 </html>
