Создал catalog.html и разметил четыре section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul class="navigation-list">
         <li class="navigation-item"><a href="#" class="navigation-link">Главная</a></li>
         <li class="navigation-item"><a href="#" class="navigation-link">О Седоне</a></li>
-        <li class="navigation-item"><a href="hotels.html" class="navigation-link">Гостиницы</a></li>
+        <li class="navigation-item"><a href="catalog.html" class="navigation-link">Гостиницы</a></li>
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Поиск</span></a></li>
@@ -23,8 +23,23 @@
     </nav>
   </header>
   <main>
-
-  </main>
+    
+    <section class="search">
+      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+      <p class="search-title">Заинтересовались?</p>
+      <p class="search-description">Укажите предполагаемые даты поездки, и мы покажум вам лучшие предложения гостиниц в Седоне</p>
+      <button type="button" class="search-button">Поиск гостиницы в Седоне</button>
+    </section>
+    <section class="signup">
+      <h2 class="signup-title">Подпишитесь на рассылку</h2>
+      <p class="signup-description">Только информация и никакого спама, честное бойскаутское!</p>
+      <form action="https://echo.htmlacademy.ru" class="signup-form">
+        <label for="signup-field" class="visually-hidden">E-mail</label>
+        <input type="email" name="signup-field" placeholder="Ваш e-mail" id="signup-field">
+        <input type="submit" value="Отправить" class="signup-button">
+      </form>
+    </section>
+  </main> 
   <footer class="page-footer">
     <ul class="social-list">
       <li class="social-item"><a href="https://vk.com/htmlacademy" class="social-link"><span class="visually-hidden">Вконтакте</span></a></li>
