Подкорректировал ссылки в catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="page-header">
-    <a class="header-logo"><img src="#" alt="Логотип Sedona" class="header-logo-img"></a>
+    <a href="index.html" class="header-logo"><img src="#" alt="Логотип Sedona" class="header-logo-img"></a>
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item"><a href="index.html" class="navigation-link">Главная</a></li>
@@ -26,8 +26,8 @@
     <section class="filters">
       <h1 class="filters-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
-        <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-link"><span class="visually-hidden">Главная</span></a></li>
-        <li class="breadcrumbs-item"><a class="breadcrumbs-link">Гостиницы</a></li>
+        <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-link breadcrumbs-link-index"><span class="visually-hidden">Главная</span></a></li>
+        <li class="breadcrumbs-item"><a class="breadcrumbs-link" title="Текущая страница">Гостиницы</a></li>
       </ul>
       <form action="https://echo.htmlacademy.ru" method="get" id="filters-form" class="filters-form">
         <fieldset class="filters-infrustructure">
