--- a/index.html
+++ b/index.html
@@ -4,50 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>HTML Academy: Седона</title>
 </head>
 <body>
   <header class="page-header">
-    <a class="header-logo"><img src="#" alt="Логотип Sedona" class="header-logo-img"></a>
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item"><a href="#" class="navigation-link">Главная</a></li>
-        <li class="navigation-item"><a href="#" class="navigation-link">О Седоне</a></li>
-        <li class="navigation-item"><a href="catalog.html" class="navigation-link">Гостиницы</a></li>
-      </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Поиск</span></a></li>
-        <li class="navigation-item"><a href="#" class="navigation-link"><span class="visually-hidden">Избранное</span></a></li>
-        <li class="navigation-item"><a href="#" class="navigation-link">Хочу сюда</a></li>
-      </ul>
-    </nav>
+    <div class="page-container">
+      <nav class="page-nav">
+        <a href="#" class="logo">
+          <img src="img/logo.svg" alt="Логотип Седона" width="139" height="70px">
+          <span class="visually-hidden">На главную</span>
+        </a>
+        <ul class="site-nav">
+          <li class="site-nav-item">
+            <a class="site-nav-link site-nav-link-current" href="#">Главная</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">О седоне</a>
+          </li>
+          <li class="site-nav-item">
+            <a class="site-nav-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="user-nav">
+          <li class="user-nav-item">
+            <a class="user-nav-icon user-nav-search" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="user-nav-item">
+            <a class="user-nav-icon user-nav-favorite" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="user-nav-item">
+            <a class="user-nav-button" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main>
-    
-    <section class="search">
-      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-      <p class="search-title">Заинтересовались?</p>
-      <p class="search-description">Укажите предполагаемые даты поездки, и мы покажум вам лучшие предложения гостиниц в Седоне</p>
-      <button type="button" class="search-button">Поиск гостиницы в Седоне</button>
-    </section>
-    <section class="signup">
-      <h2 class="signup-title">Подпишитесь на рассылку</h2>
-      <p class="signup-description">Только информация и никакого спама, честное бойскаутское!</p>
-      <form action="https://echo.htmlacademy.ru" class="signup-form">
-        <label for="signup-field" class="visually-hidden">E-mail</label>
-        <input type="email" name="signup-field" placeholder="Ваш e-mail" id="signup-field">
-        <input type="submit" value="Отправить" class="signup-button">
-      </form>
-    </section>
-  </main> 
+  <main class="main-container">
+
+  </main>
   <footer class="page-footer">
-    <ul class="social-list">
-      <li class="social-item"><a href="https://vk.com/htmlacademy" class="social-link"><span class="visually-hidden">Вконтакте</span></a></li>
-      <li class="social-item"><a href="https://t.me/htmlacademy" class="social-link"><span class="visually-hidden">Telegram</span></a></li>
-      <li class="social-item"><a href="https://www.youtube.com/user/htmlacademyru" class="social-link"><span class="visually-hidden">Youtube</span></a></li>
-    </ul>
-    <a href="tel:+78128121212" class="footer-phone">+7 (812) 812-12-12</a>
-    <a href="https://htmlacademy.ru/" class="footer-logo"><img src="#" alt="Логотип HTML Academy" class="footer-logo-img"></a>
+    
   </footer>
 </body>
 </html>
