Сверстал и стилизовал блок search

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
         </div>
       </div>
     </section>
+    <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+    <section class="search">
+      <div class="page-container">
+        <p class="search-title">Заинтересовались?</p>
+        <p class="search-description">Укажите предполагаемые даты поездки, </br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="search-button">Поиск гостиницы в Седоне</a>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-container page-footer-wrapper">
