Перенёс header и footer в catalog.html и адаптировал

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="site-nav-link" href="#">О седоне</a>
           </li>
           <li class="site-nav-item">
-            <a class="site-nav-link" href="#">Гостиницы</a>
+            <a class="site-nav-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="user-nav">
@@ -113,7 +113,7 @@
       <div class="page-container">
         <p class="search-title">Заинтересовались?</p>
         <p class="search-description">Укажите предполагаемые даты поездки, </br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a href="#" class="search-button">Поиск гостиницы в Седоне</a>
+        <a href="catalog.html" class="search-button">Поиск гостиницы в Седоне</a>
       </div>
     </section>
   </main>
