Сверстал и стилизовал блок signup

--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,113 @@
     </div>
   </header>
   <main class="main-container">
-
+    <h2 class="visually-hidden">Список найденых гостиниц</h2>
+    <section class="hotel">
+      <div class="page-container">
+        <ul class="hotel-list">
+          <li class="hotel-item">
+            <h3 class="hotel-item-title" id="title_1">Amara Resort & Spa</h3>
+            <a href="#" class="hotel-item-link">
+              <img src="/img/amare-resort-spa.jpg" aria-labelledby="title_1" alt="" width="300" height="211">
+            </a>
+            <div class="hotel-item-info">
+              <p class="hotel-item-info-category">Гостиница</p>
+              <p class="hotel-item-info-price">от 4000 &#8381</p>
+            </div>
+            <div class="hotel-item-button">
+              <button class="hotel-item-button-more" type="button">Подробнее</button>
+              <button class="hotel-item-button-favorite" type="button">В избранное</button>
+            </div>
+            <div class="hotel-item-rate">
+              <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+              </div>
+              <p class="hotel-item-rate-score">Рейтинг: 8,5</p>
+            </div>
+          </li>
+          <li class="hotel-item">
+            <h3 class="hotel-item-title" id="title_2">Villas at Poco Diablo</h3>
+            <a href="#" class="hotel-item-link">
+              <img src="/img/villas-poco-diablo.jpg" aria-labelledby="title_2" alt="" width="300" height="211">
+            </a>
+            <div class="hotel-item-info">
+              <p class="hotel-item-info-category">Гостиница</p>
+              <p class="hotel-item-info-price">от 5000 &#8381</p>
+            </div>
+            <div class="hotel-item-button">
+              <button class="hotel-item-button-more" type="button">Подробнее</button>
+              <button class="hotel-item-button-favorite button-favorite-selected" type="button">В избранном</button>
+            </div>
+            <div class="hotel-item-rate">
+              <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+              </div>
+              <p class="hotel-item-rate-score">Рейтинг: 9,2</p>
+            </div>
+          </li>
+          <li class="hotel-item">
+            <h3 class="hotel-item-title" id="title_3">Desert Quail Inn</h3>
+            <a href="#" class="hotel-item-link">
+              <img src="/img/desert-quail-inn.jpg" aria-labelledby="title_3" alt="" width="300" height="211">
+            </a>
+            <div class="hotel-item-info">
+              <p class="hotel-item-info-category">Гостиница</p>
+              <p class="hotel-item-info-price">от 2500 &#8381</p>
+            </div>
+            <div class="hotel-item-button">
+              <button class="hotel-item-button-more" type="button">Подробнее</button>
+              <button class="hotel-item-button-favorite" type="button">В избранное</button>
+            </div>
+            <div class="hotel-item-rate">
+              <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+              </div>
+              <p class="hotel-item-rate-score">Рейтинг: 6,9</p>
+            </div>
+          </li>
+          <li class="hotel-item">
+            <h3 class="hotel-item-title" id="title_3">GreenTree Inn</h3>
+            <a href="#" class="hotel-item-link">
+              <img src="/img/greentree-inn.jpg" aria-labelledby="title_3" alt="" width="300" height="211">
+            </a>
+            <div class="hotel-item-info">
+              <p class="hotel-item-info-category">Гостиница</p>
+              <p class="hotel-item-info-price">от 1500 &#8381</p>
+            </div>
+            <div class="hotel-item-button">
+              <button class="hotel-item-button-more" type="button">Подробнее</button>
+              <button class="hotel-item-button-favorite" type="button">В избранное</button>
+            </div>
+            <div class="hotel-item-rate">
+              <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
+                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="">
+              </div>
+              <p class="hotel-item-rate-score">Рейтинг: 5,0</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="signup">
+      <div class="page-container">
+        <h2 class="signup-title">Подпишитесь на рассылку</h2>
+        <p class="signup-description">Только полезная информация и никакого спама, </br> честное бойскаутское!</p>
+        <form class="signup-newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="newsletter-email">Email</label>
+          <input class="signup-newsletter-field" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail" required>
+          <button class="signup-newsletter-button" type="submit">Подписаться</button>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-container page-footer-wrapper">
