--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
         <a href="catalog.html" class="search-button">Поиск гостиницы в Седоне</a>
       </div>
     </section>
+    <section class="signup signup-index">
+      <div class="page-container">
+        <h2 class="signup-title signup-title-index">Подпишитесь на рассылку</h2>
+        <p class="signup-description signup-description-index">Только полезная информация и никакого спама, </br> честное бойскаутское!</p>
+        <form class="signup-newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="newsletter-email">Email</label>
+          <input class="signup-newsletter-field signup-newsletter-field-index" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail" required>
+          <button class="signup-newsletter-button" type="submit">Подписаться</button>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-container page-footer-wrapper">
