--- a/catalog.html
+++ b/catalog.html
@@ -45,9 +45,105 @@
     </div>
   </header>
   <main class="main-container">
+    <div class="filter">
+      <div class="page-container">
+        <header class="inner-header">
+          <h1 class="inner-header-title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a href="index.html" class="breadcrumbs-link">
+                <img src="/img/home-button.svg" alt="Домашняя страница" width="13" height="13">
+              </a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a href="#" class="breadcrumbs-link">Гостиницы</a>
+            </li>
+          </ul>
+        </header>
+        <form method="get" action="https://echo.htmlacademy.ru/" class="filter-form">
+          <fieldset class="filter-group filter-group-first">
+            <legend class="filter-title">Инфраструктура:</legend>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
+                  <input type="checkbox" class="control-input visually-hidden" name="pool" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Бассейн</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="control">
+                  <input type="checkbox" class="control-input visually-hidden" name="parking" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Парковка</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="control">
+                  <input type="checkbox" class="control-input visually-hidden" name="wifi">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Wi-Fi</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter-group">
+            <legend class="filter-title">Тип жилья:</legend>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
+                  <input type="radio" class="control-input visually-hidden" name="housing-type" value="hotel" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Гостиница</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="control">
+                  <input type="radio" class="control-input visually-hidden" name="housing-type" value="motel">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Мотель</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="control">
+                  <input type="radio" class="control-input visually-hidden" name="housing-type" value="apartments">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Апартаменты</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <div class="filter-button">
+            <button type="submit" class="filter-button-apply">Применить</button>
+            <button type="reset" class="filter-button-reset">Сбросить</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <h2 class="visually-hidden">Список найденых гостиниц</h2>
     <section class="hotel">
       <div class="page-container">
+        <div class="sorting-container">
+          <p class="sorting-title">Найдено гостиниц: 38</p>
+          <select class="sorting-select" aria-label="Сортировка">
+            <option value="cheap">Сначала дешёвые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
+          </select>
+          <a href="#" class="sorting-grid-toggle sorting-grid-toggle-current">
+            <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
+            <span class="visually-hidden">Показать крупные карточки</span>
+          </a>
+          <a href="#" class="sorting-grid-toggle">
+            <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/></svg>
+            <span class="visually-hidden">Показать карточки</span>
+          </a>
+          <a href="#" class="sorting-grid-toggle">
+            <svg aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/></svg>
+            <span class="visually-hidden">Показать список</span>
+          </a>
+        </div>
         <ul class="hotel-list">
           <li class="hotel-item">
             <h3 class="hotel-item-title" id="title_1">Amara Resort & Spa</h3>
@@ -160,6 +256,12 @@
               <a href="#" class="pagination-link">10</a>
             </li>
           </ul>
+          <label class="pagination-number" for="number">Гостиниц на странице:</label>
+            <select class="pagination-select" name="cards-number" id="number">
+              <option value="4">4</option>
+              <option value="8">8</option>
+              <option value="16">16</option>
+            </select>
         </div>
       </div>
     </section>
