--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page-container">
       <nav class="page-nav">
         <a href="#" class="logo">
-          <img src="img/logo.svg" alt="Логотип Седона" width="139" height="70px">
+          <img src="img/logo.svg" alt="Логотип Седона" width="139" height="70">
           <span class="visually-hidden">На главную</span>
         </a>
         <ul class="site-nav">
@@ -48,12 +48,12 @@
     <h2 class="visually-hidden">Добро пожаловать в великолепную Седону!</h2>
     <section class="welcome">
       <div class="page-container">
-        <img src="/img/welcome.svg" alt="Потому что Гранд Каньон хуже!" width="485" height="352">
+        <img src="img/welcome.svg" alt="Потому что Гранд Каньон хуже!" width="485" height="352">
       </div>
     </section>
     <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
     <section class="advantages">
-      <p class="advantages-title">Седона - небольшой городок в Аризоне, </br> заслуживающий большего!</p>
+      <p class="advantages-title">Седона - небольшой городок в Аризоне, <br> заслуживающий большего!</p>
       <p class="advantages-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="advantages-wrapper">
         <div class="advantages-item-first">
@@ -63,32 +63,32 @@
             <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="advantages-item-img">
-            <img src="/img/real-town.jpg" alt="Настоящий городок" width="800" height="384">
+            <img src="img/real-town.jpg" alt="Настоящий городок" width="800" height="384">
           </div>
         </div>
         <div class="advantages-item-text advantages-item-living">
           <h3 class="advantages-item-title">Жильё</h3>
           <div class="advantages-item-icon advantages-icon-living"></div>
-          <div class="advantages-item-description">Рекомендуем пожить </br> в настоящем мотеле, </br> всё как в кино!</div>
+          <div class="advantages-item-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в кино!</div>
         </div>
         <div class="advantages-item-text advantages-item-food">
           <h3 class="advantages-item-title">Еда</h3>
           <div class="advantages-item-icon advantages-icon-food"></div>
-          <div class="advantages-item-description">Всегда заказывайте </br> топовый фирменный бургер, вы не разочаруетесь!</div>
+          <div class="advantages-item-description">Всегда заказывайте <br> топовый фирменный бургер, вы не разочаруетесь!</div>
         </div>
         <div class="advantages-item-text advantages-item-souvenir">
           <h3 class="advantages-item-title">Сувениры</h3>
           <div class="advantages-item-icon advantages-icon-souvenir"></div>
-          <div class="advantages-item-description">Не только китайского, </br> но и настоящего местного производства!</div>
+          <div class="advantages-item-description">Не только китайского, <br> но и настоящего местного производства!</div>
         </div>
         <div class="advantages-item-second">
           <div class="advantages-item-text advantages-text-second">
-            <h3 class="advantages-item-title">Там есть </br> мост дьявола</h3>
+            <h3 class="advantages-item-title">Там есть <br> мост дьявола</h3>
             <p class="advantages-item-number">№2</p>
             <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <div class="advantages-item-img">
-            <img src="/img/devils-bridge.jpg" alt="Мост дьявола" width="800" height="384">
+            <img src="img/devils-bridge.jpg" alt="Мост дьявола" width="800" height="384">
           </div>
         </div>
         <div class="advantages-item-text advantages-text-third">
@@ -97,12 +97,12 @@
           <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
         </div>
         <div class="advantages-item-text advantages-text-fourth">
-          <h3 class="advantages-item-title">Красивая </br> дорога</h3>
+          <h3 class="advantages-item-title">Красивая <br> дорога</h3>
           <p class="advantages-item-number">№4</p>
           <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="advantages-item-text advantages-text-fifth">
-          <h3 class="advantages-item-title">Мало </br> туристов</h3>
+          <h3 class="advantages-item-title">Мало <br> туристов</h3>
           <p class="advantages-item-number">№5</p>
           <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
         </div>
@@ -112,14 +112,14 @@
     <section class="search">
       <div class="page-container">
         <p class="search-title">Заинтересовались?</p>
-        <p class="search-description">Укажите предполагаемые даты поездки, </br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="catalog.html" class="search-button">Поиск гостиницы в Седоне</a>
       </div>
     </section>
     <section class="signup signup-index">
       <div class="page-container">
         <h2 class="signup-title signup-title-index">Подпишитесь на рассылку</h2>
-        <p class="signup-description signup-description-index">Только полезная информация и никакого спама, </br> честное бойскаутское!</p>
+        <p class="signup-description signup-description-index">Только полезная информация и никакого спама, <br> честное бойскаутское!</p>
         <form class="signup-newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="newsletter-email">Email</label>
           <input class="signup-newsletter-field signup-newsletter-field-index" type="email" name="newsletter-email" id="newsletter-email" placeholder="Ваш e-mail" required>
