--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
     <section class="advantages">
-      <p class="advantages-title">Седона - небольшой городок в Аризоне, <br> заслуживающий большего!</p>
+      <p class="advantages-title">Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</p>
       <p class="advantages-description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="advantages-wrapper">
         <div class="advantages-item-first">
