--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <title>HTML Academy: Седона Каталог</title>
 </head>
 <body>
@@ -174,7 +175,7 @@
             </a>
             <div class="hotel-item-info">
               <p class="hotel-item-info-category">Гостиница</p>
-              <p class="hotel-item-info-price">от 4000 &#8381</p>
+              <p class="hotel-item-info-price">от 4000 &#8381;</p>
             </div>
             <div class="hotel-item-button">
               <button class="hotel-item-button-more" type="button">Подробнее</button>
@@ -182,10 +183,10 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="img/star.svg" alt="">
-                <img src="img/star.svg" alt="">
-                <img src="img/star.svg" alt="">
-                <img src="img/star.svg" alt="">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 8,5</p>
             </div>
@@ -197,7 +198,7 @@
             </a>
             <div class="hotel-item-info">
               <p class="hotel-item-info-category">Гостиница</p>
-              <p class="hotel-item-info-price">от 5000 &#8381</p>
+              <p class="hotel-item-info-price">от 5000 &#8381;</p>
             </div>
             <div class="hotel-item-button">
               <button class="hotel-item-button-more" type="button">Подробнее</button>
@@ -205,10 +206,10 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="">
-                <img src="/img/star.svg" alt="">
-                <img src="/img/star.svg" alt="">
-                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 9,2</p>
             </div>
@@ -220,7 +221,7 @@
             </a>
             <div class="hotel-item-info">
               <p class="hotel-item-info-category">Гостиница</p>
-              <p class="hotel-item-info-price">от 2500 &#8381</p>
+              <p class="hotel-item-info-price">от 2500 &#8381;</p>
             </div>
             <div class="hotel-item-button">
               <button class="hotel-item-button-more" type="button">Подробнее</button>
@@ -228,21 +229,21 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="">
-                <img src="/img/star.svg" alt="">
-                <img src="/img/star.svg" alt="">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 6,9</p>
             </div>
           </li>
           <li class="hotel-item">
-            <h3 class="hotel-item-title" id="title_3">GreenTree Inn</h3>
+            <h3 class="hotel-item-title" id="title_4">GreenTree Inn</h3>
             <a href="#" class="hotel-item-link">
-              <img src="img/greentree-inn.jpg" aria-labelledby="title_3" alt="" width="300" height="211">
+              <img src="img/greentree-inn.jpg" aria-labelledby="title_4" alt="" width="300" height="211">
             </a>
             <div class="hotel-item-info">
               <p class="hotel-item-info-category">Гостиница</p>
-              <p class="hotel-item-info-price">от 1500 &#8381</p>
+              <p class="hotel-item-info-price">от 1500 &#8381;</p>
             </div>
             <div class="hotel-item-button">
               <button class="hotel-item-button-more" type="button">Подробнее</button>
@@ -250,8 +251,8 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="img/star.svg" alt="">
-                <img src="img/star.svg" alt="">
+                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="/img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 5,0</p>
             </div>
