Самые последние доработки

--- a/catalog.html
+++ b/catalog.html
@@ -183,10 +183,10 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 8,5</p>
             </div>
@@ -206,10 +206,10 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 9,2</p>
             </div>
@@ -229,9 +229,9 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 6,9</p>
             </div>
@@ -251,8 +251,8 @@
             </div>
             <div class="hotel-item-rate">
               <div class="hotel-item-rate-stars" role="img" aria-label="Рейтинг 4 из 5">
-                <img src="/img/star.svg" alt="" width="18" height="17">
-                <img src="/img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
+                <img src="img/star.svg" alt="" width="18" height="17">
               </div>
               <p class="hotel-item-rate-score">Рейтинг: 5,0</p>
             </div>
